[gd_scene load_steps=9 format=3 uid="uid://b3brr82dyccfc"]

[ext_resource type="Texture2D" uid="uid://cc8n8vf5m2vva" path="res://sprites/house/HouseBack.png" id="1_ccge6"]
[ext_resource type="Texture2D" uid="uid://da3xw8x4wq3s1" path="res://sprites/house/HouseFront.png" id="2_tm0q6"]
[ext_resource type="Script" path="res://map_levels/scripts/house_area.gd" id="3_p2i1u"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_j840s"]
a = Vector2(219, 230)
b = Vector2(320, 14)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_02so7"]
a = Vector2(308, 6)
b = Vector2(-225, 6)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mh13f"]
a = Vector2(-223, 11)
b = Vector2(-348, 222)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kw6o4"]
a = Vector2(-345, 225)
b = Vector2(-142, 226)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_1efh3"]
a = Vector2(207, 227)
b = Vector2(26, 225)

[node name="StaticBody2D" type="StaticBody2D"]

[node name="EastWall" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_j840s")

[node name="NorthWall" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_02so7")

[node name="WestWall" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_mh13f")

[node name="SouthWallLeft" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_kw6o4")

[node name="SouthWallRight" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_1efh3")

[node name="HouseBack" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_ccge6")

[node name="HouseFront" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 150)
scale = Vector2(2, 2)
texture = ExtResource("2_tm0q6")
offset = Vector2(0, -75)

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("3_p2i1u")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(177, 186, 245, 16, -219, 18, -305, 179)

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
